--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Mega Event 2026</title>
+    <title>College Mega Event 2K26</title>
 
     <style>
         body {
